releases/0.1.0a/notes.md
# Drake's Workshop 0.1.0a

Released: 2026-07-17T21:08:32Z

## License (required)

This build is **license-gated**. You need a beta access key starting with **DWK-**.
Recover: https://api.hauskode.com/recover

## Install

### First time
1. Download **DrakesWorkshop-0.1.0a-Windows.zip**
2. Unzip to a folder
3. Run `DrakesWorkshop.exe` and enter your DWK- key

### Already installed
1. Download **DrakesWorkshop-0.1.0a-Update.zip**
2. Unzip into the same folder (overwrite)
3. Leave `DrakesWorkshop.exe` and the rest of `data_ModuleGameWorkshop_*` alone

## Files

| File | Size | SHA-256 |
|------|------|---------|
| DrakesWorkshop-0.1.0a-Windows.zip | 77.1 MB | `f9a5821176d10409ef7f09a1af805a48282915e82834dbbcf8365afa96a33210` |
| DrakesWorkshop-0.1.0a-Update.zip | 7.7 MB | `ad4eaedaeb118e5e5c9a218e42174050f2fd12768595bcf479ee2fd287cc8c39` |

## Changes

See [CHANGELOG.md](../CHANGELOG.md).
