releases/0.1.0/notes.md
# Drake's Workshop 0.1.0

Released: 2026-07-17T20:26:30Z

## License (required)

This build is **license-gated**. You need a beta access key starting with **DWK-**.
Recover: https://api.hauskode.com/recover

## Install

### First time
1. Download **DrakesWorkshop-0.1.0-Windows.zip**
2. Unzip to a folder
3. Run `DrakesWorkshop.exe` and enter your DWK- key

### Already installed
1. Download **DrakesWorkshop-0.1.0-Update.zip**
2. Unzip into the same folder (overwrite)
3. Leave `DrakesWorkshop.exe` and the rest of `data_ModuleGameWorkshop_*` alone

## Files

| File | Size | SHA-256 |
|------|------|---------|
| DrakesWorkshop-0.1.0-Windows.zip | 77.1 MB | `ffcb420c2d9d17ae91c594e8a9456582ecc80bc97bf452fc6868066d1f6e6711` |
| DrakesWorkshop-0.1.0-Update.zip | 7.7 MB | `64c617a3fde71c2194c64b006c9b31c0156980cb1676506aaaf304511397efb6` |

## Changes

See [CHANGELOG.md](../CHANGELOG.md).
